--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pygame==2.5.2
 PyJWT==2.8.0
 pylint==3.0.3
 pymongo==4.6.1
+python-dotenv==1.0.1
 requests==2.31.0
 setuptools==69.0.3
 sqlparse==0.4.4
